--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^2.2.8",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^27.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
