--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^2.2.8",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.14",
+    "history": "^5.3.0",
     "jest": "^27.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
